syntax = "proto3";

package getMessages;

message GetMessagesRequest {
    shared.Headers headers = 1;
}

message GetMessagesResponse {
	shared.Headers headers = 1;
    repeated string prevotes = 2;
    repeated string precommits = 3;
}
